--- a/index.html
+++ b/index.html
@@ -43,9 +43,7 @@ https://www.tooplate.com/view/2126-antique-cafe
                 </div>    
                 <div class="bg-black bg-opacity-70 p-10 mb-5">
                     <p class="text-white leading-8 text-sm font-light">
-                        This is a coffee shop template named Antique Cafe which is a parallax HTML5 template with a good responsiveness.
-                        Feel free to use this layout for your cafe.
-                    	If you have any question, please <a rel="nofollow" href="https://www.tooplate.com/contact" target="_parent">send us a message</a>. </p>
+                        எங்கள் காப்பி கடை உங்களை அழைத்துச் செல்லும் ஒரு அரிய அனுபவம்! ருசிகரமான காப்பி, புதிய இனிப்பு, மற்றும் நேர்த்தியான பரிமாற்றங்களுடன் உங்கள் நாள் சிறப்பாக மாறட்டும். உங்கள் நண்பர்களுடன் ஒரு இனிய தருணத்தை பகிர்ந்திட இங்கே வரவும்! <a rel="nofollow" href="https://www.tooplate.com/contact" target="_parent">send us a message</a>. </p>
                 </div>
                 <div class="text-center">
                     <div class="inline-block">
